# VoiceBridgeRtpProxy

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyproject.toml.bak
src/exceptions/: __init__.py
src/server/: __init__.py  base.py  calls.py
src/server/models/: __init__.py  asterisk_models.py
src/server/network/: base.py
src/server/worker/: base.py  stream_opt_in_worker.py  stream_opt_out_worker.py
src/session/: __init__.py  session_manager.py
src/utils/: ari_proxy_client.py  voice_bridge_client.py
