[tool.poetry]
name = "voice-bridge-proxy"
version = "0.1.0"
description = "voice bridge proxy server"
authors = [""]
packages = [
    { include = "server", from = "src" },
    { include = "utils", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"


fastapi = ">=0.111.0,<0.112.0"
uvicorn = ">=0.30.1,<0.31.0"
websocket-client = "^1.8.0"
python-dotenv = "^1.0.1"
pydantic = "^2.8.1"
pycairo = "^1.26.1"
pygobject = "^3.48.2"
janus = "^1.0.0"
requests = "^2.32.3"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "server:main"